fixing overflow

--- a/src/components/Spinner/Spinner.styles.css
+++ b/src/components/Spinner/Spinner.styles.css
@@ -3,7 +3,7 @@
     position: relative;
     width: 80px;
     height: 80px;
-    margin: calc(50vh - 40px) calc(50% - 40px);
+    margin: calc(50% - 40px) calc(50% - 40px);
   }
   .lds-ring div {
     box-sizing: border-box;
@@ -12,7 +12,7 @@
     width: 64px;
     height: 64px;
     margin: 8px;
-    border: 2px solid #212121;
+    border: 8px solid white;
     border-radius: 50%;
     animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
     border-color: #212121 transparent transparent transparent;
